[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/bg_1.png" type="Texture" id=1]
[ext_resource path="res://assets/1bit_char.png" type="Texture" id=2]
[ext_resource path="res://PlayerCharacter.gd" type="Script" id=3]
[ext_resource path="res://InfoTextDynFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://PPGManagerYAML.gd" type="Script" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 32, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 64, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 96, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 96, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 128, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 160, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 192, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "use",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "shrug",
"speed": 4.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 40, 40 )

[node name="Node2D" type="Node2D"]

[node name="World" type="Node2D" parent="."]
skew = 4.37114e-08

[node name="PlayerCharacter" type="KinematicBody2D" parent="World"]
position = Vector2( 206.692, 551.996 )
skew = 4.37114e-08
z_index = 1
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="World/PlayerCharacter"]
scale = Vector2( 4, 4 )
frames = SubResource( 20 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/PlayerCharacter"]
shape = SubResource( 21 )

[node name="InfoText" type="Label" parent="World/PlayerCharacter"]
visible = false
margin_left = -17.4268
margin_top = -77.5016
margin_right = 20.5732
margin_bottom = -55.5016
grow_horizontal = 2
custom_fonts/font = ExtResource( 4 )
text = "TEST"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RayCast2D" type="RayCast2D" parent="World/PlayerCharacter"]
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 2
collide_with_areas = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="World"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="World/ParallaxBackground"]
motion_scale = Vector2( 0, 0 )

[node name="Sprite" type="Sprite" parent="World/ParallaxBackground/ParallaxLayer"]
position = Vector2( 512, 300 )
scale = Vector2( 4, 4 )
skew = 4.37114e-08
texture = ExtResource( 1 )

[node name="PPGManager" type="Node2D" parent="World"]
position = Vector2( 300, 544 )
script = ExtResource( 5 )
[connection signal="animation_finished" from="World/PlayerCharacter/AnimatedSprite" to="World/PlayerCharacter" method="_on_AnimatedSprite_animation_finished"]
[connection signal="ppg_no_effect" from="World/PPGManager" to="World/PlayerCharacter" method="_on_PPGManager_ppg_no_effect"]
[connection signal="ppg_state_change" from="World/PPGManager" to="World/PlayerCharacter" method="_on_PPGManager_ppg_state_change"]
